# voice-chat-service

./: .env  .gitignore  API.md  DELIVERY_CHECKLIST.md  Dockerfile  GRADIO_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  RAG_IMPLEMENTATION.md  README.md  README_GRADIO.md  cert.pem  docker-compose.yml  env_example  gradio_app.py  key.pem  pem_gen.md  prd.md  pyproject.toml  requirements.txt  run.sh  start.py
app/: __init__.py  config.py  main.py  models.py  service.py
app/modules/: __init__.py  asr.py  audio_assembler.py  embedding.py  intent_understanding.py  llm.py  llm_generator.py  rag.py  tts.py  vad.py  vector_db.py
app/utils/: time_utils.py
conf/: rag_filter_prompt.txt  system_prompt_generator.txt  system_prompt_intent.txt
data/: test_events.json
examples/: README.md  client_example.py  generate_test_audio.py  rag_api_examples.py
scripts/: reset_and_reload_data.py
