[project]
name = "aibase-voice-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.49.1",
    "httpx[socks]>=0.28.1",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "openai>=2.3.0",
    "psutil>=7.1.0",
    "pydantic-settings>=2.11.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
