[project]
name = "aibase-voice-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "gradio>=5.49.1",
    "httpx[socks]>=0.28.1",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "openai>=2.3.0",
    "psutil>=7.1.0",
    "pydantic-settings>=2.11.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "num2words>=0.5.14",
    "kokoro>=0.9.4",
    "ordered-set>=4.1.0",
    "pypinyin>=0.55.0",
    "cn2an>=0.5.23",
    "jieba>=0.42.1",
    "misaki[en,zh]>=0.9.4",
    "en-core-web-sm @ file://${PROJECT_ROOT}/wheels/en_core_web_sm-3.8.0-py3-none-any.whl",
    "pip>=25.2",
    "qdrant-client>=1.15.1",
    "onnxruntime>=1.23.1",
    "kokoro-onnx>=0.4.9",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
explicit = true           # 关键：只有被引用的包才会走这里

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
explicit = true           # 关键：只有被引用的包才会走这里

[tool.uv.sources]
num2words = [{ index = "pypi" }]
